# pull-all-tui-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
docs/: astro.config.mjs
docs/public/: polygit-demo-dark.cast  polygit-demo-light.cast
docs/src/components/: GlyphLegend.astro  PageTitle.astro  TerminalCast.astro  ThemeToggle.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: columns-and-glyphs.mdx  keybindings.mdx
docs/src/content/docs/start/: usage.mdx
docs/src/data/: keymap.json  keymap.ts
docs/src/styles/: custom.css
pull-all-siblings/: pull-all-repos
src/: app.rs  git.rs  main.rs  persist.rs  plain.rs  render.rs  theme.rs  worker.rs
