[package]
name = "pull-all"
version = "0.17.0"
edition = "2024"

[[bin]]
name = "pull-all"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive", "env"] }
num_cpus = "1"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
strip-ansi-escapes = "0.2"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
