[package]
name = "polygit"
version = "2.0.1"
edition = "2024"

[[bin]]
name = "polygit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive", "env"] }
num_cpus = "1"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
strip-ansi-escapes = "0.2"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
terminal-colorsaurus = "1.0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
